--- a/JLCardAnimation/DragCardView.xib
+++ b/JLCardAnimation/DragCardView.xib
@@ -7,10 +7,11 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DragCardView"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="juW-gj-i9x" customClass="DragCardView">
             <rect key="frame" x="0.0" y="0.0" width="426" height="665"/>
@@ -18,9 +19,43 @@
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Bb-P5-fjE">
                     <rect key="frame" x="0.0" y="0.0" width="426" height="426"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4PK-Qi-FtN">
+                            <rect key="frame" x="0.0" y="0.0" width="284" height="426"/>
+                            <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NPv-QW-OSu">
+                            <rect key="frame" x="284" y="0.0" width="142" height="142"/>
+                            <color key="backgroundColor" red="0.67322668969999999" green="0.97254901959999995" blue="0.45258892449999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C2H-wg-tSp">
+                            <rect key="frame" x="284" y="142" width="142" height="142"/>
+                            <color key="backgroundColor" red="1" green="0.61283572210000004" blue="0.32399563320000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A0f-V0-dgl">
+                            <rect key="frame" x="284" y="284" width="142" height="142"/>
+                            <color key="backgroundColor" red="1" green="0.51860894097222221" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        </imageView>
+                    </subviews>
                     <color key="backgroundColor" red="1" green="0.61283572210000004" blue="0.32399563320000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="2Bb-P5-fjE" secondAttribute="height" multiplier="1:1" id="SUI-DK-Mve"/>
+                        <constraint firstItem="A0f-V0-dgl" firstAttribute="height" secondItem="C2H-wg-tSp" secondAttribute="height" id="4YS-lE-TUh"/>
+                        <constraint firstItem="A0f-V0-dgl" firstAttribute="top" secondItem="C2H-wg-tSp" secondAttribute="bottom" id="C25-J5-EFX"/>
+                        <constraint firstItem="NPv-QW-OSu" firstAttribute="leading" secondItem="4PK-Qi-FtN" secondAttribute="trailing" id="Cdg-ce-Vd5"/>
+                        <constraint firstItem="C2H-wg-tSp" firstAttribute="top" secondItem="NPv-QW-OSu" secondAttribute="bottom" id="GhL-A4-6sh"/>
+                        <constraint firstAttribute="bottom" secondItem="4PK-Qi-FtN" secondAttribute="bottom" id="HHM-RO-4Ri"/>
+                        <constraint firstItem="4PK-Qi-FtN" firstAttribute="width" secondItem="2Bb-P5-fjE" secondAttribute="width" multiplier="2:3" id="VUf-WY-cQs"/>
+                        <constraint firstItem="4PK-Qi-FtN" firstAttribute="leading" secondItem="2Bb-P5-fjE" secondAttribute="leading" id="ZuR-58-vR6"/>
+                        <constraint firstItem="NPv-QW-OSu" firstAttribute="top" secondItem="2Bb-P5-fjE" secondAttribute="top" id="aHJ-C9-avl"/>
+                        <constraint firstItem="A0f-V0-dgl" firstAttribute="width" secondItem="C2H-wg-tSp" secondAttribute="width" id="abs-mA-x2M"/>
+                        <constraint firstItem="C2H-wg-tSp" firstAttribute="leading" secondItem="4PK-Qi-FtN" secondAttribute="trailing" id="arj-gx-nLb"/>
+                        <constraint firstAttribute="trailing" secondItem="NPv-QW-OSu" secondAttribute="trailing" id="gij-OZ-w0d"/>
+                        <constraint firstItem="A0f-V0-dgl" firstAttribute="leading" secondItem="4PK-Qi-FtN" secondAttribute="trailing" id="qfV-C1-iGb"/>
+                        <constraint firstAttribute="trailing" secondItem="C2H-wg-tSp" secondAttribute="trailing" id="sLB-Ti-3kq"/>
+                        <constraint firstItem="4PK-Qi-FtN" firstAttribute="top" secondItem="2Bb-P5-fjE" secondAttribute="top" id="v7g-gW-bQi"/>
+                        <constraint firstItem="NPv-QW-OSu" firstAttribute="height" secondItem="2Bb-P5-fjE" secondAttribute="height" multiplier="1:3" id="wUQ-r5-HWC"/>
+                        <constraint firstAttribute="width" secondItem="2Bb-P5-fjE" secondAttribute="height" multiplier="1:1" id="wtl-M8-qVR"/>
+                        <constraint firstItem="C2H-wg-tSp" firstAttribute="height" secondItem="NPv-QW-OSu" secondAttribute="height" id="xpw-ON-Ut0"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TzA-un-Fdp">
@@ -40,11 +75,17 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="2Bb-P5-fjE" firstAttribute="leading" secondItem="juW-gj-i9x" secondAttribute="leading" id="2Rs-71-oOh"/>
-                <constraint firstAttribute="trailing" secondItem="2Bb-P5-fjE" secondAttribute="trailing" id="NkQ-DG-ykH"/>
-                <constraint firstItem="2Bb-P5-fjE" firstAttribute="top" secondItem="juW-gj-i9x" secondAttribute="top" id="jEa-R6-y42"/>
+                <constraint firstItem="2Bb-P5-fjE" firstAttribute="leading" secondItem="juW-gj-i9x" secondAttribute="leading" id="AB4-n1-cfh"/>
+                <constraint firstItem="2Bb-P5-fjE" firstAttribute="top" secondItem="juW-gj-i9x" secondAttribute="top" id="fSA-pQ-oDb"/>
+                <constraint firstAttribute="trailing" secondItem="2Bb-P5-fjE" secondAttribute="trailing" id="h0G-Ch-7TB"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="bigImageView" destination="4PK-Qi-FtN" id="g5q-Gy-ez3"/>
+                <outlet property="firstImageView" destination="NPv-QW-OSu" id="WrQ-YY-TDc"/>
+                <outlet property="secondImageView" destination="C2H-wg-tSp" id="R62-IC-Lu9"/>
+                <outlet property="threeImageView" destination="A0f-V0-dgl" id="WE0-IE-3rQ"/>
+            </connections>
             <point key="canvasLocation" x="-100" y="-45.5"/>
         </view>
     </objects>
